@startuml

title Class Diagram

class User {
    - UserEmail
    - UserPassword
    - Username
    - UserRole
    - IsActive
    + User(UserEmail userEmail, Username username, UserRole userRole, Password password)
    + ChangeUsername(Username username)
    + ChangeUserRole(UserRole userRole)
    + ChangePassword(Password password)
    + ActivateUser()
    + DeactivateUser()  
}

class UserDTO {
    - UserEmail
    - UserName
    - IsActive
}

class UsersController {
    + GetAll()
    + GetGetById(String id)
    + Create(UserDto dto)
    + Update(String id, UserDto dto)
    + SoftDelete(String id)
    + HardDelete(String id)
}

class UserId {
    + UserId(string value)
}

class Username {
    + Username(string username)
}

class UserEmail {
    + UserEmail(string email)
}

enum UserRole {
    - Admin
    - Doctor
    - Nurse
    - Technician
    - Patient
}

class UserService {
    + GetAllAsync()
    + GetByIdAsync(UserId id)
    + AddAsync(UserDto dto)
    + UpdateAsync(UserDto dto)
    + InactivateAsync(UserId id)
    + DeleteAsync(UserId id)
}

class PasswordService {
    + GeneratePassword()
}

class EmailService {
    + SendEmail()
}

interface IUserRepository {
}

interface UserRepository {
}

class BaseRepository {
    ====
    Classe do projeto base
    ====
}

class UserMapper {
    + ToDomain(UserDto dto, UserId userId)
    + ToDto(User user)
}

UsersController -> UserService
UserService ---> UserMapper : uses
UserService --> UserDTO : creates

UserService --> PasswordService : uses
UserService -> EmailService : uses

UserMapper <-- UserDTO : receives
UserMapper --> User : creates

User --> UserId : has a
User --> Username : has a
User --> UserEmail : has a
User --> UserRole : has a

UserService --> UserRepository
UserRepository --|> BaseRepository
UserRepository -|> IUserRepository

@enduml